--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Merlot theme
 description: Merlot is a theme for GitHub Pages.
-show_downloads: true
+show_downloads: false
 google_analytics:
-theme: jekyll-theme-merlot
 
-
+remote_theme: pages-themes/merlot@v0.2.0
+plugins:
+- jekyll-remote-theme
