--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
-title: Merlot theme
-description: Merlot is a theme for GitHub Pages.
+title: Yu Shuyan's page
+description: 好好学习，天天向上.
 show_downloads: false
 google_analytics:
 
 remote_theme: pages-themes/merlot@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+
