--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,8 @@ jobs:
         with:
           ruby-version: 2.7
           bundler-cache: true
+      - name: change permissions
+        run: chmod +x script/bootstrap
       - name: build
         run: script/bootstrap
       - name: test
