--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ description: 好好学习，天天向上.
 show_downloads: false
 google_analytics:
 
-remote_theme: pages-themes/merlot@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: jekyll-theme-merlot
+
 
 
