--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,8 @@ jobs:
         run: chmod +x script/bootstrap
       - name: change permissions
         run: chmod +x script/cibuild
+      - name: change permissions
+        run: chmod +x script/validate-html
       - name: build
         run: script/bootstrap
       - name: test
